istio_hello/10-sock-shop-complete-demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: carts-db
  labels:
    app: carts-db
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: carts-db
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: carts-db
        image: mongo
        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  labels:
    app: carts-db
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: mongo
  selector:
    app: carts-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: carts
  labels:
    app: carts
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: carts
        version: v1
    spec:
      containers:
      - name: carts
        image: weaveworksdemos/carts:0.4.8
        ports:
         - name: http
           containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    app: carts
    version: v1
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: carts
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalogue-db
  labels:
    app: catalogue-db
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: catalogue-db
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: catalogue-db
        image: weaveworksdemos/catalogue-db:0.3.0
        ports:
        - name: mysql
          containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    app: catalogue-db
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  selector:
    app: catalogue-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalogue
  labels:
    app: catalogue
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: catalogue
        version: v1
    spec:
      containers:
      - name: catalogue
        image: weaveworksdemos/catalogue:0.3.5
        ports:
        - name: http
          containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: catalogue
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front-end-v1
  labels:
    app: front-end
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: front-end
        version: v1
    spec:
      containers:
      - name: front-end
        image: registry.gitlab.com/cloudnative_impress/tutorial/front-end:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: node
          containerPort: 8079
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
          readOnlyRootFilesystem: true
        imagePullPolicy: Always
      imagePullSecrets:
      - name: reggitlab
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front-end-v2
  labels:
    app: front-end
    version: v2
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: front-end
        version: v2
    spec:
      containers:
      - name: front-end
        image: registry.gitlab.com/cloudnative_impress/tutorial/front-end:v2
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: node
          containerPort: 8079
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
          readOnlyRootFilesystem: true
        imagePullPolicy: Always
      imagePullSecrets:
      - name: reggitlab
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: node
    port: 8079
    targetPort: node
  selector:
    app: front-end
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orders-db
  labels:
    app: orders-db
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: orders-db
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: orders-db
        image: mongo
        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    app: orders-db
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: mongo
  selector:
    app: orders-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: orders
        version: v1
    spec:
      containers:
      - name: orders
        image: weaveworksdemos/orders:0.4.7
        ports:
        - name: http
          containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: orders
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: payment
        version: v1
    spec:
      containers:
      - name: payment
        image: weaveworksdemos/payment:0.4.3
        ports:
        - name: http
          containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: payment
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: queue-master
  labels:
    app: queue-master
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: queue-master
        version: v1
    spec:
      containers:
      - name: queue-master
        image: weaveworksdemos/queue-master:0.3.1
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  labels:
    app: queue-master
  annotations:
    prometheus.io/path: "/prometheus"
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: queue-master
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.6.8
        ports:
        - name: dist
          containerPort: 25672
        - name: management
          containerPort: 15672
        - name: node
          containerPort: 5672
        - name: epmd
          containerPort: 4369
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
              - DAC_OVERRIDE
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: epmd
    port: 4369
    targetPort: epmd
  - name: node
    port: 5672
    targetPort: node
  - name: dist
    port: 25672
    targetPort: dist
  - name: management
    port: 15672
    targetPort: management
  selector:
    app: rabbitmq
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shipping
  labels:
    app: shipping
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: shipping
        version: v1
    spec:
      containers:
      - name: shipping
        image: weaveworksdemos/shipping:0.4.8
        ports:
        - name: http
          containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: shipping
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-db
  labels:
    app: user-db
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: user-db
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: user-db
        image: weaveworksdemos/user-db:0.4.0
        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  labels:
    app: user-db
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: mongo
  selector:
    app: user-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
    version: v1
  namespace: sock-shop-with-mesh
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      containers:
      - name: user
        image: weaveworksdemos/user:0.4.7
        ports:
        - name: http
          containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
  namespace: sock-shop-with-mesh
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: user
