istio_hello/40-sock-shop-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sock-shop
  namespace: sock-shop-with-mesh
spec:
  hosts:
  - "*"
  gateways:
  - sock-shop-gateway
  http:
  - route:
    - destination:
        host: front-end
        port:
          number: 8079
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts
  namespace: sock-shop-with-mesh
spec:
  hosts:
  - carts
  http:
  - route:
    - destination:
        host: carts
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
  namespace: sock-shop-with-mesh
spec:
  hosts:
  - catalogue
  http:
  - route:
    - destination:
        host: catalogue
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
  namespace: sock-shop-with-mesh
spec:
  hosts:
  - user
  http:
  - route:
    - destination:
        host: user
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: sock-shop-with-mesh
spec:
  hosts:
  - payment
  http:
  - route:
    - destination:
        host: payment
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders
  namespace: sock-shop-with-mesh
spec:
  hosts:
  - orders
  http:
  - route:
    - destination:
        host: orders
        subset: v1
