istio_hello/51-sock-shop-virtual-service-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sock-shop
  namespace: sock-shop-with-mesh
spec:
  hosts:
  - "*"
  gateways:
  - sock-shop-gateway
  http:
  - route:
    - destination:
        host: front-end
        port:
          number: 8079
        subset: v1
    retries:
      attempts: 10
      perTryTimeout: 2s
      retryOn: 5xx
