istio_hello/70-sock-shop-destination-rule-circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: carts
  namespace: sock-shop-with-mesh
spec:
  host: carts
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 2
        maxRequestsPerConnection: 2
      tcp:
        maxConnections: 2
    outlierDetection:
      baseEjectionTime: 180.000s
      consecutiveErrors: 1
      interval: 1.000s
      maxEjectionPercent: 100
